<resources>
    <string name="app_name">Ratus</string>
    <string name="firebase_client_id">79759232563-2sj88ruor2q4ted99q13iiv78ho177oe.apps.googleusercontent.com</string>
    <string name="hello_blank_fragment">hello_blank_fragment</string>
    <string name="budget">Budget</string>
    <string name="_0_00">0,00 €</string>
    <string name="add_a_transaction">Add a transaction</string>
    <string name="name">Name</string>
    <string name="date">Date</string>
    <string name="category_icon">category icon</string>
    <string name="my_transactions">My transactions</string>
    <string name="my_budget">My budget</string>
    <string name="last_transactions">Last transactions :</string>
    <string name="ratus_tips">Ratus tips</string>
    <string name="show_all">Show all</string>
    <string name="connected">Connected</string>
    <string name="disconnected">Disconnected</string>
    <string name="my_funds">My funds</string>
    <string name="profile">Profile</string>
    <string name="home">Home</string>
    <string name="shopping">Shopping</string>
    <string name="vehicle">Vehicle</string>
    <string name="sport">Sport</string>
    <string name="culture">Culture</string>
    <string name="entertainment">Entertainment</string>
    <string name="travel">Travel</string>
    <string name="savings">Savings</string>
    <string name="taxes">Taxes</string>
    <string name="misc">Misc</string>
    <string name="gift">Gift</string>
    <string name="refund">Refund</string>
    <string name="pay">Payment</string>
    <string name="help">Help</string>
    <string name="health">Health</string>
    <string name="unknown">Unknown</string>
    <string name="none">None</string>
    <string name="daily">Daily</string>
    <string name="weekly">Weekly</string>
    <string name="biweekly">Biweekly</string>
    <string name="monthly">Monthly</string>
    <string name="bimonthly">Bimonthly</string>
    <string name="quarterly">Quarterly</string>
    <string name="annual">Annual</string>
    <string name="biannual">Biannual</string>
    <string name="tips_title">Discover the Ratus tips to save even more!</string>
    <string name="tips">Tips</string>
    <string name="ratus_tip">Ratus tip</string>
    <string name="participate">Participate in the fund</string>
    <string name="contributors">Contributors</string>
    <string name="disconnect">Disconnect</string>
    <string name="what_is_the_transaction_s_type">What is the transaction\'s type ?</string>
    <string name="new_transaction">New transaction</string>
    <string name="in">In</string>
    <string name="out">Out</string>
    <string name="what_is_the_transaction_s_amount">What is the transaction\'s amount ?</string>
    <string name="what_is_the_transaction_s_category">What is the transaction\'s category ?</string>
    <string name="next">Next</string>
    <string name="_10_00">10.00 €</string>
    <string name="please_complete_all_fields">Please complete all the fields</string>
    <string name="is_the_transaction_recurring">Is the transaction recurring ?</string>
    <string name="transaction_s_date">Transaction\'s date</string>
    <string name="yes">yes</string>
    <string name="no">no</string>
    <string name="date_button_placeholder">__/__/____</string>
    <string name="from_the">From the</string>
    <string name="until">Until</string>
    <string name="if_no_end_date_is_mentioned_the_recurrence_is_infinite">If no end date is mentioned, the recurrence is infinite.</string>
    <string name="what_is_the_transaction_s_name">What is the transaction\'s name ?</string>
    <string name="cancel">Cancel</string>
    <string name="validate">Validate</string>
    <string name="my_transaction">My transaction</string>
    <string name="date_recurrence">Date/Recurrence</string>
    <string name="category">Category</string>
    <string name="amount">Amount</string>
    <string name="type">Type</string>
    <string name="recurrence_start">Recurrence start</string>
    <string name="recurrence_end">Recurrence end</string>
    <string name="transaction_date">Transaction\'s date</string>
    <string name="recurrence">Recurrence</string>
    <string name="loading">loading</string>
    <string name="add_a_contributor">Add a contributor</string>
    <string name="id_of_the_user">Id of the user</string>
    <string name="the_id_is_available_on_your_profile_page">The id is available on your profile page</string>
    <string name="add">Add</string>
    <string name="invalid_user">Invalid user id</string>
    <string name="edit_profile">Edit profile</string>
    <string name="create_fund">Create fund</string>
    <string name="edit_fund">Edit fund</string>
    <string name="title">Title</string>
    <string name="my_fund">My fund</string>
    <string name="euro_symbol">€</string>
    <string name="_1500_00">1500.00</string>
    <string name="goal">Goal</string>
    <string name="fund">Fund</string>
    <string name="text_copied_to_clipboard">Text copied to clipboard</string>
</resources>