<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.fundEdit.EditFundFragment">

    <TextView
        android:id="@+id/editFundTitleLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/title"
        android:textColor="?attr/colorPrimary"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="@+id/editFundTitleEditText"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/editFundTitleEditText"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/editFundTitleEditText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="50dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="50dp"
        android:backgroundTint="?attr/colorPrimary"
        android:ems="10"
        android:hint="@string/my_fund"
        android:inputType="textPersonName"
        android:textColor="?attr/colorPrimary"
        android:textColorHint="?attr/colorPrimaryInverse"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editFundTitleLabel" />

    <TextView
        android:id="@+id/editFunGoalLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/goal"
        android:textColor="?attr/colorPrimary"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="@+id/editFundGoalEditText"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/editFundGoalEditText"
        app:layout_constraintTop_toBottomOf="@+id/editFundTitleEditText" />

    <EditText
        android:id="@+id/editFundGoalEditText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="50dp"
        android:layout_marginTop="16dp"
        android:backgroundTint="?attr/colorPrimary"
        android:ems="10"
        android:gravity="right"
        android:hint="@string/_1500_00"
        android:inputType="textPersonName|numberDecimal"
        android:textColor="?attr/colorPrimary"
        android:textColorHint="?attr/colorPrimaryInverse"
        android:textSize="16sp"
        app:layout_constraintEnd_toStartOf="@+id/editFundGoalCurrencyTextView"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editFunGoalLabel" />

    <TextView
        android:id="@+id/editFundGoalCurrencyTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="50dp"
        android:text="@string/euro_symbol"
        android:textColor="?attr/colorPrimary"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="@+id/editFundGoalEditText"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/editFundGoalEditText" />

    <LinearLayout
        android:id="@+id/linearLayout4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="@+id/editFundContributorLayout"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editFundGoalEditText">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/editFundContributorLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/editFundContributorLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:text="@string/contributors"
                android:textColor="?attr/colorPrimary"
                android:textSize="20sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageView
                android:id="@+id/editFundAddContributorImageView"
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:src="@drawable/ic_add_48px"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/editFundContributorLabel" />

            <EditText
                android:id="@+id/editFundContributorIdEditText"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:backgroundTint="?attr/colorPrimary"
                android:ems="10"
                android:inputType="textPersonName"
                android:textColor="?attr/colorPrimary"
                android:textColorHint="?attr/colorPrimaryInverse"
                app:layout_constraintBottom_toBottomOf="@+id/editFundAddContributorImageView"
                app:layout_constraintEnd_toStartOf="@+id/editFundQRCodeScanner"
                app:layout_constraintStart_toEndOf="@+id/editFundAddContributorImageView"
                app:layout_constraintTop_toTopOf="@+id/editFundAddContributorImageView" />

            <ImageView
                android:id="@+id/editFundQRCodeScanner"
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:layout_marginEnd="16dp"
                android:src="@drawable/ic_qr_code_scanner_48px"
                app:layout_constraintBottom_toBottomOf="@+id/editFundContributorIdEditText"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="@+id/editFundContributorIdEditText" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/editFundContributorRecyclerView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="16dp"
                android:orientation="horizontal"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/editFundContributorIdEditText"
                tools:itemCount="1"
                tools:listitem="@layout/view_holder_user" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="32dp"
        android:gravity="center"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout4"
        app:layout_constraintVertical_bias="0.0">

        <Button
            android:id="@+id/editFundCancelButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:backgroundTint="?attr/colorOnSecondary"
            android:text="@string/cancel"
            android:textColor="?attr/colorSecondary"
            android:textSize="16sp" />

        <Space
            android:layout_width="20dp"
            android:layout_height="wrap_content" />

        <Button
            android:id="@+id/editFundValidateButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:backgroundTint="?attr/colorSecondary"
            android:text="@string/validate"
            android:textColor="?attr/colorOnSecondary"
            android:textSize="16sp" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>